feat: añadir scripts de inicialización de BD y actualizar .gitignore
- Añadidos scripts SQL de inicialización: 01-init.sql y 02-seed.sql
- Actualizado .gitignore para permitir archivos SQL de inicialización
- Mantiene exclusión de archivos SQL de backup/dump

--- a/.gitignore
+++ b/.gitignore
@@ -116,6 +116,9 @@ backups/
 *.dump
 *.sql
 
+# Excepciones: Scripts de inicialización de BD
+!database/init/*.sql
+
 # Archivos temporales del sistema
 .DS_Store
 .DS_Store?
