--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 # ========================================
 # GAMC Sistema Web Centralizado - Docker Compose Unificado
-# Todos los servicios en un solo stack
+# Incluye: Backend Go + Frontend Auth + PostgreSQL + Redis + MinIO
 # ========================================
+
+version: '3.8'
 
 services:
   # ========================================
@@ -26,6 +28,8 @@ services:
       - ./database/init:/docker-entrypoint-initdb.d:ro
       # Persistencia de datos
       - postgres_data:/var/lib/postgresql/data
+      # Configuración personalizada
+      - ./database/postgresql.conf:/etc/postgresql/postgresql.conf:ro
       # Backups
       - ./database/backups:/backups
     networks:
@@ -47,7 +51,7 @@ services:
     image: redis:7-alpine
     container_name: gamc_redis
     restart: unless-stopped
-    command: redis-server --appendonly yes
+    command: redis-server --appendonly yes --requirepass gamc_redis_password_2024
     environment:
       TZ: America/La_Paz
     ports:
@@ -55,12 +59,14 @@ services:
     volumes:
       # Persistencia de datos
       - redis_data:/data
+      # Configuración personalizada
+      - ./redis/redis.conf:/usr/local/etc/redis/redis.conf:ro
       # Logs
       - ./redis/logs:/var/log/redis
     networks:
       - gamc_network
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ["CMD", "redis-cli", "-a", "gamc_redis_password_2024", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -116,38 +122,42 @@ services:
   # SERVICIOS DE APLICACIÓN
   # ========================================
 
-  # Backend de Autenticación
-  gamc-auth-backend:
+  # Backend Go
+  gamc-backend-go:
     build:
-      context: ./backend-auth
-      dockerfile: Dockerfile
-    container_name: gamc_auth_backend
+      context: ./gamc-backend-go
+      dockerfile: docker/Dockerfile
+    container_name: gamc_backend_go
     restart: unless-stopped
     environment:
       NODE_ENV: development
       PORT: 3000
       API_PREFIX: /api/v1
       DATABASE_URL: postgresql://gamc_user:gamc_password_2024@postgres:5432/gamc_system
-      REDIS_URL: redis://redis:6379/0
+      REDIS_URL: redis://:gamc_redis_password_2024@redis:6379/0
       JWT_SECRET: gamc_jwt_secret_super_secure_2024_key_never_share
       JWT_REFRESH_SECRET: gamc_jwt_refresh_secret_super_secure_2024_key
       JWT_EXPIRES_IN: 15m
       JWT_REFRESH_EXPIRES_IN: 7d
-      CORS_ORIGIN: http://localhost:5173
+      JWT_ISSUER: gamc-auth
+      JWT_AUDIENCE: gamc-system
+      CORS_ORIGIN: http://localhost:5173,http://localhost:3000,http://localhost:4000
+      RATE_LIMIT_WINDOW_MS: 900000
+      RATE_LIMIT_MAX_REQUESTS: 100
       TZ: America/La_Paz
+      LOG_LEVEL: info
     ports:
       - "3000:3000"
     volumes:
-      # Hot reload - montar código fuente
-      - ./backend-auth/src:/app/src:ro
-      - ./backend-auth/prisma:/app/prisma:ro
-      - ./backend-auth/.env:/app/.env:ro
-      # Excluir node_modules para mejor performance
-      - /app/node_modules
+      # Para desarrollo: montar código fuente para hot reload (opcional)
+      # - ./gamc-backend-go:/app:ro
+      # - /app/vendor
+      # Logs de aplicación
+      - ./gamc-backend-go/logs:/app/logs
     networks:
       - gamc_network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -157,6 +167,11 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # Frontend de Autenticación
   gamc-auth-frontend:
@@ -169,28 +184,35 @@ services:
     environment:
       VITE_API_URL: http://localhost:3000/api/v1
       VITE_APP_NAME: GAMC Auth System
+      VITE_MINIO_URL: http://localhost:9000
+      NODE_ENV: development
     ports:
       - "5173:5173"
     volumes:
-      # Hot reload - montar código fuente
+      # Hot reload - montar código fuente para desarrollo
       - ./frontend-auth/src:/app/src:ro
       - ./frontend-auth/public:/app/public:ro
       - ./frontend-auth/index.html:/app/index.html:ro
       - ./frontend-auth/vite.config.ts:/app/vite.config.ts:ro
       - ./frontend-auth/tailwind.config.js:/app/tailwind.config.js:ro
       - ./frontend-auth/postcss.config.js:/app/postcss.config.js:ro
-      # Excluir node_modules
+      # Excluir node_modules para mejor performance
       - /app/node_modules
-    depends_on:
-      - gamc-auth-backend
     networks:
       - gamc_network
+    depends_on:
+      - gamc-backend-go
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # ========================================
-  # SERVICIOS AUXILIARES Y ADMINISTRACIÓN
+  # SERVICIOS DE ADMINISTRACIÓN (OPCIONAL)
   # ========================================
 
-  # PostgreSQL Admin (PgAdmin)
+  # PgAdmin - Administración de PostgreSQL
   pgadmin:
     image: dpage/pgadmin4:latest
     container_name: gamc_pgadmin
@@ -219,7 +241,7 @@ services:
     container_name: gamc_redis_commander
     restart: unless-stopped
     environment:
-      REDIS_HOSTS: "GAMC Redis:redis:6379"
+      REDIS_HOSTS: "GAMC Redis:redis:6379:0:gamc_redis_password_2024"
       HTTP_USER: admin
       HTTP_PASSWORD: admin123
       PORT: 8081
@@ -273,6 +295,25 @@ services:
     profiles:
       - setup
 
+  # Nginx Gateway (Opcional para desarrollo)
+  nginx-gateway:
+    image: nginx:alpine
+    container_name: gamc_nginx_gateway
+    restart: unless-stopped
+    ports:
+      - "8090:80"
+    volumes:
+      - ./minio/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./minio/nginx/html:/usr/share/nginx/html:ro
+    networks:
+      - gamc_network
+    depends_on:
+      - minio
+      - gamc-backend-go
+      - gamc-auth-frontend
+    profiles:
+      - gateway
+
 # ========================================
 # VOLÚMENES PERSISTENTES
 # ========================================
@@ -299,3 +340,7 @@ networks:
   gamc_network:
     driver: bridge
     name: gamc_network
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.20.0.0/16
