--- a/gamc-backend-go/.env.example
+++ b/gamc-backend-go/.env.example
@@ -1,15 +1,18 @@
-# .env.example
+# GAMC Backend Go - Variables de Entorno
+# ====================================
+
+# Configuración de aplicación
 NODE_ENV=development
 PORT=3000
 API_PREFIX=/api/v1
 
-# Base de datos
+# Base de datos PostgreSQL
 DATABASE_URL=postgresql://gamc_user:gamc_password_2024@localhost:5432/gamc_system
 
 # Redis
 REDIS_URL=redis://:gamc_redis_password_2024@localhost:6379/0
 
-# JWT
+# JWT Configuration
 JWT_SECRET=gamc_jwt_secret_super_secure_2024_key_never_share
 JWT_REFRESH_SECRET=gamc_jwt_refresh_secret_super_secure_2024_key
 JWT_EXPIRES_IN=15m
@@ -27,49 +30,34 @@ RATE_LIMIT_MAX_REQUESTS=100
 # Timezone
 TZ=America/La_Paz
 
-# =====================================
-# .gitignore
-# Binarios de Go
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-main
+# ========================================
+# MinIO Configuration
+# ========================================
+MINIO_ENDPOINT=localhost:9000
+MINIO_ACCESS_KEY=gamc_backend
+MINIO_SECRET_KEY=gamc_backend_secret_2024
+MINIO_USE_SSL=false
+MINIO_REGION=us-east-1
+MINIO_MAX_FILE_SIZE=100MB
+MINIO_ALLOWED_TYPES=.pdf,.doc,.docx,.xls,.xlsx,.txt,.zip,.rar,.jpg,.jpeg,.png,.gif
+MINIO_PRESIGNED_EXPIRY=24h
 
-# Archivos de test
-*.test
-*.out
+# ========================================
+# WebSocket Configuration
+# ========================================
+WEBSOCKET_PORT=3001
+WEBSOCKET_PING_INTERVAL=30s
+WEBSOCKET_PONG_TIMEOUT=60s
+WEBSOCKET_MAX_MESSAGE_SIZE=1MB
+WEBSOCKET_READ_BUFFER_SIZE=1024
+WEBSOCKET_WRITE_BUFFER_SIZE=1024
 
-# Dependencias de Go
-/vendor/
-
-# Archivos de configuración local
-.env
-.env.local
-
-# Logs
-*.log
-logs/
-
-# Directorio de builds
-/dist/
-/build/
-
-# IDEs
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Archivos temporales
-*.tmp
-*.temp
-
-# Coverage
-*.cover
-coverage.out
+# ========================================
+# Email Configuration (Opcional)
+# ========================================
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_FROM=noreply@gamc.gov.bo
+SMTP_USE_TLS=true
