bash para pruebas de sistema con menos restricciones que frontend

--- a/frontend-auth/Dockerfile
+++ b/frontend-auth/Dockerfile
@@ -9,7 +9,7 @@ WORKDIR /app
 
 # Instalar dependencias
 COPY package*.json ./
-RUN npm ci
+RUN npm install
 
 # Copiar código fuente
 COPY . .
@@ -30,19 +30,34 @@ EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
 
-# Etapa de desarrollo
+# Etapa de desarrollo - VERSIÓN CORREGIDA
 FROM node:18-alpine AS development
+
+# Crear usuario node con UID/GID específicos para evitar problemas de permisos
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S reactjs -u 1001 -G nodejs
 
 WORKDIR /app
 
+# Cambiar propietario del directorio de trabajo
+RUN chown -R reactjs:nodejs /app
+
+# Cambiar al usuario no-root
+USER reactjs
+
 # Copiar package files
-COPY package*.json ./
-RUN npm ci
+COPY --chown=reactjs:nodejs package*.json ./
+
+# Instalar dependencias como usuario reactjs
+RUN npm install
 
 # Copiar código fuente
-COPY . .
+COPY --chown=reactjs:nodejs . .
+
+# Asegurar permisos de ejecución en node_modules
+RUN chmod -R 755 node_modules/.bin/ 2>/dev/null || true
 
 EXPOSE 5173
 
 # IMPORTANTE: Agregar --host 0.0.0.0 para Docker
-CMD ["npm", "run", "dev"]
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
